--- a/.github/workflows/docker-platforms.yml
+++ b/.github/workflows/docker-platforms.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.platforms.outputs.matrix) }}
-    uses: tiacsys/github-workflows/.github/workflows/docker-build.yml@main
+    uses: tiacsys/github-workflows/.github/workflows/docker-build.yml@v1
     with:
       ghr-free-disk: ${{ inputs.ghr-free-disk }}
       platform: ${{ matrix.platform }}
